# uav-acoustic

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.txt  vcpkg.json
apps/qt_gui/: CMakeLists.txt
apps/qt_gui/src/: main.cpp
core/audio/include/core/audio/: audio_chunk.h  i_audio_source.h  sndfile_replay_source.h
core/audio/src/: sndfile_replay_source.cc
core/detect/include/core/detect/: energy_detector.h  i_detector.h  mock_detector.h
core/detect/src/: mock_detector.cc
core/dsp/include/core/dsp/: fft_radix2.h  mel_filterbank.h  pcen_extractor.h  pcen_ring_buffer.h
core/dsp/src/: mel_filterbank.cc  pcen_extractor.cc  pcen_ring_buffer.cc
core/fsm/include/core/fsm/: event_fsm.h  simple_fsm.h
core/fsm/src/: event_fsm.cc
core/logic/include/core/logic/: fsm.h
core/logic/src/: fsm.cc
core/segment/include/core/segment/: segment_builder.h
core/segment/src/: segment_builder.cc
core/telemetry/include/core/telemetry/: telemetry_bus.h  telemetry_snapshot.h
core/telemetry/src/: telemetry_bus.cc
core/tflite/include/core/tflite/: tcn_detector.h  tflite_runner.h
core/tflite/src/: tcn_detector.cc  tflite_runner.cc
qml/: Main.qml
qt_bridge/include/qt_bridge/: pcen_image_provider.h  telemetry_provider.h
qt_bridge/src/: pcen_image_provider.cc  telemetry_provider.cc
scripts/: build_tflite_windows.ps1
